# 2d_generation

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
2d_generation/include/config/: config.h
2d_generation/include/engine/: chunk.h  sdl_application.h  tile.h  world.h
2d_generation/include/meshes/: chunk_mesh.h
2d_generation/resources/shaders/: chunk.frag  chunk.vert
2d_generation/src/: main.cpp
2d_generation/src/engine/: chunk.cpp  sdl_application.cpp  world.cpp
2d_generation/src/meshes/: chunk_mesh.cpp
